Version 6.18.4
TODO
    - #91: UnicodeDecodeError: 'ascii' codec can't decode byte 0xc3 in position 11: ordinal not in range(128)
    - #92: getmail_maildir: bugfix for python3 using bytes buffer instead of str

Version 6.18.3
06 July 2021
    - #89: fetchmail feature: skip fetching read mail.
      New `imap_search` and `imap_on_delete` to fetch only `Unseen` messages and set them to `\Seen`.
    - add `-s/--searchset` to override imap search and setting of flags for all rcfile's in the command
    - if no `--rcfile` and no default `getmailrc`, then use all files from the `--getmaildir` folder
    - fix "SyntaxError: Non-ASCII in file, but no encoding declared" (only Python 2.7)

Version 6.17
15 June 2021
    - #79: UnicodeEncodeError: 'ascii' codec can't encode character in position
    - #78: Don't encode pure ASCII X-getmail-retrieved-from-mailbox
    - #69: skip_imap_fetch_size. IMAP requests size, making davmail download all the messages every time, making it slow
    - #81: Allow having IMAP message IDs recorded in headers (if received=True in config)
    - #82: Add branding to Received header
    - #85: Discuss content of oldmail filese in FAQ

Version 6.16
13 May 2021
    - #73: Additional exception handling for IMAP IDLE with xoauth2
    - #74: 'ascii' codec can't encode characters in position 4017-4018
    - #75: Bring back "getmails" wrapper (was a Debian addition, but fits well to getmail itself)
    - #76, #77: Revert replaced strings (from "2020" to "2021") in docs/CHANGELOG

Version 6.15
21 March 2021
    - #67 Implement a destination that delivers to a local LMTP server
    - #71 allow "=" in ssl_ciphers to allow "ssl_ciphers = DEFAULT@SECLEVEL=1"
    - #72 non-compliant e-mail header (in multidrop configuration) causes getmail to stop working
    - Added test folder: run tests with `make test`. Tests and fixes.

Version 6.14
14 January 2021
    - #64 getmail6: sometimes dies on running external filter program in version 6.13