@@ -1,7 +1,9 @@
 Version 6.18.4
-TODO
+26 September 2021
     - #91: UnicodeDecodeError: 'ascii' codec can't decode byte 0xc3 in position 11: ordinal not in range(128)
     - #92: getmail_maildir: bugfix for python3 using bytes buffer instead of str
+    - add new use_netrc and netrc_file configuration options to support reading secrets from a .netrc file
+      (https://marc.info/?l=getmail&m=163241430111986&w=3).
 
 Version 6.18.3
 06 July 2021
